<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layoutDescription="@xml/fragment_detail_scene"
    tools:context=".ui.fragments.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_detailFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detailFilm"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_detailFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right_detailFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_poster_detailFilm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/guideline_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout_detailFilm"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/img_poster_detailFilm" />

    <TextView
        android:id="@+id/tv_title_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/title_detailFilm" />

    <TextView
        android:id="@+id/release_date_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/date"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/tv_title_detailFilm" />

    <TextView
        android:id="@+id/tv_release_date_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/release_date_detailFilm" />

    <TextView
        android:id="@+id/genre_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/genre"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date_detailFilm" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_genre_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/genre_detailFilm" />

    <TextView
        android:id="@+id/production_company_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/production_company"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/chip_genre_detailFilm" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_production_company_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/production_company_detailFilm" />

    <TextView
        android:id="@+id/description_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/chip_production_company_detailFilm" />

    <TextView
        android:id="@+id/tv_description_detailFilm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_detailFilm"
        app:layout_constraintStart_toStartOf="@id/guideline_left_detailFilm"
        app:layout_constraintTop_toBottomOf="@id/description_detailFilm" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_movie_filter"
        app:fabSize="normal"
        tools:ignore="ContentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="36dp"/>
</androidx.constraintlayout.motion.widget.MotionLayout>