<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_movie"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/favorites" />
    </group>
</menu>